--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,6 +9,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
       - name: construir imagen
-        run: docker build -t brobolo/ejemplo-actions:latest
+        run: docker build -t brobolo/ejemplo-actions:latest .
       - name: subir imagen a dockerhub
         run: docker push brobolo/ejemplo-actions:latest
