--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,14 +1,23 @@
 name: Crear y subir imagen docker
-on: 
-  [workflow_dispatch]
+
+on:
+  workflow_dispatch:
 
 jobs:
   publish_images:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: construir imagen
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-      - name: subir imagen a dockerhub
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Construir imagen
+        run: docker build -t brobolo/ejemplo-actions:latest .
+
+      - name: Subir imagen a Docker Hub
         run: docker push brobolo/ejemplo-actions:latest
