--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,7 +1,9 @@
-name: Crear y subir imagen docker
+name: Crear y subir imagen Docker
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   publish_images:
